@@ -74,7 +74,7 @@ XSLTProcessor::XSLTProcessor() {
 
     xslVersion.append("1.0");
     appName.append("TransforMiiX");
-    appVersion.append("1.0 [beta v20000722]");
+    appVersion.append("1.0 [beta v20000725]");
 
 
     //-- create XSL element types
